apps/seerr/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: seerr
  namespace: apps
  labels:
    app.kubernetes.io/name: seerr
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: seerr
  ports:
    - name: http
      port: 5055
      targetPort: access-http
      protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: seerr-api
  namespace: apps
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: seerr
  ports:
    - name: http
      port: 5055
      targetPort: http
      protocol: TCP
